# salesorder-sqlchatbot

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
mysql_ingestion/: initialize_data.py
mysql_ingestion/db/: connection.py
mysql_ingestion/seeders/: __init__.py  base_faker.py  customer_faker.py  employee_faker.py  inventory_log_faker.py  line_item_faker.py  product_faker.py  sales_order_faker.py  supplier_faker.py
mysql_init/: init.sql
sql_agent/: __init__.py  agent.py  few_shot_examples.json  streamlit.py
